	  These tools will use the Qt and GTK versions of the kconfig-
	  frontends configuration tools (if you built them) (2013-12-16)
	* arch/arm/src/armv7-a/arm_head.h:  Fix some errors in the cache
	  invalidation logic (only seem to matter for Cortex-A8) (21-3-12-19).
	* Kconfig and all Make.defs files:  Add CONFIG_DEBUG_NOOPT.  Now
	  you can indepenently enable/disable debug symbols and optimization
	  (2013-12-20).
	* configs/README.txt and Documentation/NuttxPortingGuide.html:
	  Remove documentation of NuttX configuration variables.  Since
	  converting to the kconfig-frontend tools, the NuttX configuration
	  is now documented in the Kconfig files and summarized in the
	  autogenerated Documentation/NuttXConfigVariables.html file.
	  This old configuration variable documentation is now a liability
	  and, hence, was removed (2013-12-20).
	* arch/Kconfig, arch/arm/Kconfig, arch/arm/include/x/chip.h, and
	  and arch/arm/src/x/x_irq.c where x={kinetis, lm, lpc17xx, lpc43xx,
	  sam34, or stm32}:  Beginning of support for nested, high priority
	  interrupts.  Lots more still needs to be done (2013-12-21).
	* arch/arm/src/armv7-m/up_exception.S and arch/arm/src/x/x_vectors.S:
	  where  x={kinetis, lm, lpc17xx, lpc43xx, sam34, or stm32}: completes
	  the basic implementation of nested, high priority interreupts.
	  Still untested and need documentation (2013-12-21).
	* configs/stm3210e-eval/buttons: Converted to use kconfig-frontends
	  tools (untested) (2013-12-22).
	* configs/Kconfig, configs/viewtool-stm32f107/include/board-stm32f103vct6.h,
	  and /board-stm32f107vct6.h:  The viewtools board can now be configured
	  to support either the STM32F103VCT6 or the STM32F107VCT6 (2013-12-22).
	* configs/Kconfig, README.txt, viewtool-stm32f107/highpri, Kconfig,
	  README.txt, and src/stm32_highpri.c:  This is the initial framework
	  for a test of the high priority, nested interrupt logic.  Still
	  incomplete and does not yet run (2013-12-22).